--- a/src/app/core/components/games/games.component.html
+++ b/src/app/core/components/games/games.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" matSort>
   <!-- Home Team Column -->
   <ng-container matColumnDef="home_team">
     <th mat-header-cell *matHeaderCellDef>Home Team</th>
@@ -13,7 +13,7 @@
 
   <!-- Week Column -->
   <ng-container matColumnDef="week">
-    <th mat-header-cell *matHeaderCellDef>Week</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Week</th>
     <td mat-cell *matCellDef="let element">{{ element.week }}</td>
   </ng-container>
 
@@ -29,7 +29,7 @@
 
   <!-- Date Column -->
   <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
     <td mat-cell *matCellDef="let element">
       {{
         element.date | date: 'MM-dd-yyyy'
