--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -2,5 +2,5 @@
 <mat-tab-group>
     <mat-tab label="Games"> <app-games></app-games> </mat-tab>
     <mat-tab label="Teams"> <app-teams></app-teams> </mat-tab>
-    <mat-tab label="Players"> Content 3 </mat-tab>
+    <mat-tab label="Players"> <app-players></app-players></mat-tab>
 </mat-tab-group>
